Refactor fauna command architecture and add permission-aware subcommands